# demo_cmake

./: README.md
Step01/: CMakeLists.txt  README.md  step.cpp  step.h.in
Step02/: CMakeLists.txt  README.md  step.cpp  step.h.in
Step02/mydir/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
Step03/: CMakeLists.txt  step.cpp  step.h.in
Step03/mydir/: CMakeLists.txt  MathFunctions.cpp
Step04/: CMakeLists.txt  step.cpp  step.h.in
Step04/mydir/: CMakeLists.txt
Step05/: CMakeLists.txt  step.cpp  step.h.in
Step05/mydir/: CMakeLists.txt
Step06/: CMakeLists.txt  step.cpp  step.h.in
Step06/mydir/: mysqrt.h
